# rust-ci-test-repo

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: always.yml  pull-requests.yml  release.yml  scheduled.yml
another-lib/: Cargo.toml
rust-ci-test-repo/: Cargo.toml  build.rs
rust-ci-test-repo/src/: main.rs
some-lib/: Cargo.toml
some-lib/tests/: loom.rs
